# tensorflow-cert

./: .gitignore  pyproject.toml
0_TF_Intro/: W1_0_MNIST.ipynb  W3_0_MNIST_CNN.ipynb  W4_0_ImageGen.ipynb  Z1_TF_Basic.ipynb  Z2_TF_Regression.ipynb  Z3_TF_Classification.ipynb
1_TF_CNN/: Z1_CNN_Basic.ipynb  Z1_CNN_Multiclass.ipynb  Z2_Transfer_Learning.ipynb
2_TF_NLP/: W2_0_Embeddings.ipynb  W2_1_Subword.ipynb  W3_0_LSTM.ipynb  W4_0_Gen_Text.ipynb
3_TF_SEQ/: W1_Synthetic.ipynb  W2_NN_Time_Series.ipynb  gen_synth_util.py
4_TF_ADV_Custom/: W1_Func_API.ipynb  W2_Loss.ipynb  W3_Layer.ipynb  W4_Model.ipynb  W5_Callback.ipynb
5_TF_ADV_Custom/: W1_Tensors.ipynb  W2_Training.ipynb  W3_Graph.ipynb
6_TF_ADV_CNN/: W1_transfer_learning_1.ipynb
