[tool.poetry]
name = "tensorflow-cert"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
tensorflow = "^2.14.0"
ipykernel = "^6.26.0"
keras = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
