[tool.poetry]
name = "tensorflow-cert"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
tensorflow = "^2.14.0"
keras = "^2.14.0"
jupyterlab = "^4.0.7"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
